gallery/styles/gallery.css
/* default gallery container */
.gallery-container {
	overflow-y: hidden; 
	display: block; 
	max-width: 1000px; 
	width: 90%; 
	max-height: 800px; 
	min-height: 300px;  
	height: 75vh; 
	margin: auto;
}

.gallery-inner-container {
	background-color: rgb(48, 48, 48); 
	height: 100%; 
	position: relative;
}

.gallery-image-container {
	height: calc(100% - 30px); 
	text-align: center; 
	position: relative;
}

.gallery-image {
	position: absolute; 
	left: 0; 
	right: 0; 
	
	margin-left: auto;
	margin-right: auto; 
	
	width: auto; 
	height: auto; 
	max-width: 100%; 
	max-height: 100%;  
	 
	transition: opacity 0.5s ease-in-out;
}

.gallery-image-fade {
	background-color: black;
	transition: opacity .25s ease-in-out;

	position: absolute; 
	left: 0px; 
	top: 0px; 
	
	width: 100%; 
	height: 100%; 
}

.gallery-change-image-container {
	position: absolute;
	top: calc(50% - 32px); /* 32px == half of the gallery-change-image-button height */
}

.gallery-change-image-button {
	height: 64px; 
	opacity: 0.45;
}

.gallery-topbar {
	position: absolute; 
	top: 0px;  
	
	width: 100%; 
	height: 32px; 
	text-align: center;
}

.gallery-topbar-background {
	position: absolute;
	width: 100%; 
	height: 100%; 
	
	opacity: 0.6; 
	background-color: rgb(16, 16, 16);  
	background: radial-gradient(
		at 50% 
		0%, 
		rgba(0,0,0,0.75) 0%, 
		rgba(0,0,0,0.75) 30%,  
		rgba(0,0,0,0) 70%);
}

.gallery-topbar-title {
	position: relative;  
	width: auto;
	margin: auto; 
	text-align: center;  
	
	color: white; 
	opacity: 0.9; 
	text-shadow: 1px 1px rgb(48, 48, 48)
}

.gallery-bottombar {
	width: 100%; 
	height: 30px; 
	margin: 0px;
	
	background-color: rgb(16, 16, 16); 
	opacity: 1; 
}

.gallery-bottombar-text-container {
	
	position: relative; 
	width: auto; 
	height: 30px; 
	max-width: calc(100% -  38px);
	margin: 0px 0px 0px 8px; /* left is 8px */
	
	display: inline-block; 
	text-align: left;

	white-space: nowrap; 
	overflow: hidden
}

.gallery-bottombar-text-background {
	width: auto; 
	height: 26px;
	max-width: 100%;
	
	padding-top: 4px;
	margin-bottom: auto; 
	
	font-size: 14px;
	color: rgb(192, 192, 192); 
	
	white-space: nowrap;
	overflow: hidden;
}

.gallery-bottombar-faded {
	opacity: 0.75;
}

.gallery-bottombar-separator {
	display: inline-block; 
	position: relative;
	height: 16px;
	left: 4px; 
	top: 2px; 
	
	border-left: 1px solid rgb(192, 192, 192); 
}

.gallery-current-description {
	margin-left: 8px;
}

.gallery-toggle-fullscreen-container {
	float: right;
	width: 30px; 
	height: 30px;
	
	background-color: rgb(16, 16, 16); 
}

.gallery-toggle-fullscreen {
	width: 16px; 
	height: 16px;  
	display: block;  
	
	margin-left: auto;
	margin-right: auto;
	padding-top: 6px;
	
	opacity: 1; 
}

